# e2_remake

./: CMakeLists.txt  README.md  main.cpp
domain/: Building.cpp  Building.h  Ethnologist.cpp  Ethnologist.h
gui/: AbstractModel.cpp  AbstractModel.h  GUI.cpp  GUI.h
observer/: Observer.h
repository/: BuildingRepository.cpp  BuildingRepository.h  EthnologistRepository.cpp  EthnologistRepository.h  Repository.h
